--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
 	"name": "@tunnel/context",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"type": "module",
-	"exports": "./src/index.ts",
+	"exports": {
+		"require": {
+			"types": "./dist/index.d.cts",
+			"default": "./dist/index.cjs"
+		},
+		"import": {
+			"types": "./dist/index.d.mts",
+			"default": "./dist/index.mjs"
+		}
+	},
+	"files": ["dist"],
 	"scripts": {
-		"build": "ts-node ./scripts/build.ts"
+		"build": "pkgroll"
 	},
 	"devDependencies": {
-		"lionconfig": "3.0.1",
-		"typescript": "5.1.6"
+		"@tunnel/tsconfig": "0.0.0",
+		"pkgroll": "2.0.1",
+		"typescript": "5.3.3"
 	}
 }
