--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "lionconfig/tsconfig.json",
+	"extends": "@tunnel/tsconfig",
 	"compilerOptions": {
 		"outDir": "dist",
 		"baseUrl": ".",
